Improve tests and fix case where stopHeartbeats is called twice